snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/maven-metadata.xml.sha1
b2f16c2d322dbc2933b5f652cb3e2ede45ae20ac